--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-webintent2",
-  "version": "1.0.4",
+  "name": "cordova-plugin-webintent",
+  "version": "1.0.1",
   "description": "By Boris Smus",
   "cordova": {
-    "id": "cordova-plugin-webintent2",
+    "id": "cordova-plugin-webintent",
     "platforms": [
       "ios",
       "android",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/okwei2000/webintent.git"
+    "url": "git+https://github.com/dasgib/webintent.git"
   },
   "keywords": [
     "Custom URL Scheme",
@@ -34,12 +34,12 @@
       "version": ">=3.0.0"
     }
   ],
-  "author": "Kevin Wei",
+  "author": "Dominik Weiss",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/okwei2000/webintent/issues"
+    "url": "https://github.com/dasgib/webintent/issues"
   },
-  "homepage": "https://github.com/okwei2000/webintent#readme",
+  "homepage": "https://github.com/dasgib/webintent#readme",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
