--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<plugin xmlns="http://cordova.apache.org/ns/plugins/1.0" id="com.qdev.webintent"
-      version="1.0.4">
+<plugin xmlns="http://cordova.apache.org/ns/plugins/1.0" id="com.railsland.webintent" version="1.0.1">
     <name>WebIntent</name>
     <description>Web intents for Cordova</description>
     <license>MIT</license>
@@ -15,24 +13,21 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="WebIntent" >
-                <param name="android-package" value="com.borismus.webintent.WebIntent"/>
+                <param name="android-package" value="com.railsland.webintent.WebIntent"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/WebIntent.java" target-dir="src/com/borismus/webintent" />
-
-        <!--
-        <config-file target="AndroidManifest.xml" phttps://phonegap.com/blog/2016/02/16/git-plugins/arent="/manifest/application">
-            <receiver
-                android:name="com.borismus.webintent.WebIntent$ReferralReceiver"
-                android:enabled="true"
-                android:exported="true"
-                android:label="@string/app_name">
-                <intent-filter>
-                    <action android:name="com.android.vending.INSTALL_REFERRER" />
-                </intent-filter>
-            </receiver>
+        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest" mode="merge">
+            <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
         </config-file>
-        -->
+
+        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest/application" mode="merge">
+            <provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true">
+                <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/provider_paths"/>
+            </provider>
+        </config-file>
+
+        <resource-file src="src/android/provider_paths.xml" target="res/xml/provider_paths.xml"/>
+        <source-file src="src/android/WebIntent.java" target-dir="src/com/railsland/webintent" />
     </platform>
 </plugin>
